We now connect to Azure, we can calculate how many seats. And now we have a display of seats available with asterisks.

--- a/SoftwareEngineeringProject/MavPlannerinstal/MavPlannerinstal/Express/SingleImage/Reports/5-4-2016 11-22-07 PM.htm
+++ b/SoftwareEngineeringProject/MavPlannerinstal/MavPlannerinstal/Express/SingleImage/Reports/5-4-2016 11-22-07 PM.htm
@@ -73,7 +73,7 @@ Number of files:
 
 <TD WIDTH="55%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-4
+2
 </FONT></P></TD>
 
 </TR>
@@ -186,7 +186,7 @@ DBlocation.txt
 
 <TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-[ProgramFilesFolder]MavPlanner-SSPandJEM\MavPlanner
+[CommonAppDataFolder]Mavplanner
 </FONT></P></TD>
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -196,80 +196,12 @@ Always Install
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-4/22/2016 10:47:11 AM
+5/4/2016 10:49:33 PM
 </FONT></P></TD>
 
 <TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-127
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-Scheduled.mdf
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]MavPlanner-SSPandJEM\MavPlanner
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-Always Install
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-4/22/2016 10:47:11 AM
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-3211264
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-Scheduled_log.ldf
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]MavPlanner-SSPandJEM\MavPlanner
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-Always Install
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-4/22/2016 10:47:11 AM
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-516096
+24
 </FONT></P></TD>
 
 <TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -288,7 +220,7 @@ MavPlanner.exe
 
 <TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-[ProgramFilesFolder]MavPlanner-SSPandJEM\MavPlanner
+[ProgramFilesFolder]Mavplanner\MavPlanner
 </FONT></P></TD>
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -298,12 +230,12 @@ Always Install
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-4/22/2016 10:47:11 AM
+5/4/2016 11:11:42 PM
 </FONT></P></TD>
 
 <TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-82944
+199168
 </FONT></P></TD>
 
 <TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
